--- a/Day11/first.html
+++ b/Day11/first.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./s.css">
 </head>
 <body>
+
     <div class="container">
-        <div class="box box1">Box1</div>
-        <div class="box box2">Box2</div>
-        <div class="box box3">Box3</div>
-        <div class="box box4">Box4</div>
+        
     </div>
+    
 </body>
 </html>
